envs/stg/network/main/security_group.tf
resource "aws_security_group" "web" {
    name = "${aws_vpc.this.tags.Name}-web"
    vpc_id = aws_vpc.this.id
    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port = 443
        to_port = 443
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "${aws_vpc.this.tags.Name}-web"
    }
}

# vpc内部のサービス同士が自由に通信できるsg
# vpc作成時にAWS側で自動生成するが、tfではaws_default_secruity_groupになるなど扱いが特殊のため、明示的に作成
resource "aws_security_group" "vpc" {
    name = "${aws_vpc.this.tags.Name}-vpc"
    vpc_id = aws_vpc.this.id
    ingress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "${aws_vpc.this.tags.Name}-web"
    }
}

# RDS
resource "aws_security_group" "db_foobar" {
    name = "${aws_vpc.this.tags.Name}-db-foobar"
    vpc_id = aws_vpc.this.id
    ingress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        self = true
    }
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "${aws_vpc.this.tags.Name}-db-foobar"
    }
}
